Fix color/spacing

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -272,10 +272,10 @@ a:focus {
   margin-bottom: 40px;
 }
 .padding-top{
-  padding-top: 70px;
+  padding-top: 40px;
 }
 .padding-bottom{
-  padding-bottom: 70px;
+  padding-bottom: 40px;
 }
 .bg-color{
   background-color: #f2f2f2;
